[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem="1.3.3"
poem-openapi={ version = "1.3.3", features = ["swagger-ui"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.11", default_features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "chrono"]}
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
dotenv="0.15.0"
async-trait="0.1.52"
once_cell="1.9.0"
